Material Output Node Inside Node Group Renders Pink in Eevee #61869

Closed
opened 2019-02-23 01:44:38 +01:00 by Emir Sinan Gürlek · 3 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1070

Blender Version
2.80 Beta. (Date: 2019-02-22 21:01) (Hash: 655faca105) image.png

Short description of error
When material output node is in a node group, LookDev and Eevee renders pink (Cycles renders fine). Same happens in 2.79 version as well.

Exact steps for others to reproduce the error
Create a node group that includes material output node (Make sure there is no other material output node outside). Check LookDev, Eevee and Cycles render views.


Expected behaviour is that Eevee detects material output node inside node group and renders accordingly (Like it does in Cycles).node_group_render_bug.blend

**System Information** Operating system: Windows 10 Graphics card: GTX 1070 **Blender Version** 2.80 Beta. (Date: 2019-02-22 21:01) (Hash: 655faca10586) ![image.png](https://archive.blender.org/developer/F6691024/image.png) **Short description of error** When material output node is in a node group, LookDev and Eevee renders pink (Cycles renders fine). Same happens in 2.79 version as well. **Exact steps for others to reproduce the error** Create a node group that includes material output node (Make sure there is no other material output node outside). Check LookDev, Eevee and Cycles render views. --- Expected behaviour is that Eevee detects material output node inside node group and renders accordingly (Like it does in Cycles).[node_group_render_bug.blend](https://archive.blender.org/developer/F6691159/node_group_render_bug.blend)

Added subscriber: @filibis

Added subscriber: @filibis
Clément Foucault was assigned by Sebastian Parborg 2019-02-25 16:01:18 +01:00

This issue was referenced by d1a744173e

This issue was referenced by d1a744173e73ddb86b3ad0f0fb65b89600ad8d55

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61869
No description provided.